--- a/utils/settings.json
+++ b/utils/settings.json
@@ -8,15 +8,17 @@
         },
     "library":{
         "voltage":0.55,
-        "input_slew_lower":30,
-        "input_slew_upper":500,
-        "input_slew":[50,55,60,65,70,75,80],
-        "output_load_lower":15,
-        "output_load_upper":200,
-        "output_load":[15,20,25,30,35,40,45]
+        "lib_size":[5,5],
+        "input_slew_lower":2.1,
+        "input_slew_upper":1236,
+        "input_slew":[2.1,102.208,250.991,482.79,1236],
+        "output_load_lower":0.1,
+        "output_load_upper":95.1025,
+        "output_load":[0.1,7.80035,19.2449,37.075,95.1025],
+        "sink_cap":0.607
         },
     "symcts":{
-        "buffer_lib_size":5,
+        "buffer_lib_size":1,
         "a":10000,
         "b":1000,
         "c0":0.5,
@@ -24,7 +26,7 @@
         "Slin":30
             },
     "evaluation":{
-        "voltage":0.6,
+        "voltage":0.55,
         "mc_times":1000,
         "rise_or_fall":"fall",
         "initial_input_slew":50
