--- a/utils/settings.json
+++ b/utils/settings.json
@@ -17,13 +17,14 @@
         "output_load":[0.1,1.809,7.808,19.26,37.11,62.15,95.10]
         },
     "symcts":{
-        "Slin":1000
+        "Slin":200,
+        "slew_max":200
             },
     "evaluation":{
         "voltage":0.55,
-        "mc_times":1000,
+        "mc_times":10,
         "rise_or_fall":"fall",
-        "initial_input_slew":1000
+        "initial_input_slew":200
     }
 
 }
